added mapping between classes